--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@
 .header p{
     text-align: center;
     margin: 5vh 0;
-    background-color: #3fa8cb;
+    background-color: #3fa8cb; 
     color: #fff;
     padding: 12px 14px;
     border-radius: 30px;
@@ -66,6 +66,18 @@
     font-family: 'Poppins', sans-serif;
     letter-spacing: 1px;
     padding: 12px 0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.todo, .todo_del, .todo_edit{
+    background-color: #60bcdb;
+}
+
+.todo_del svg{
+    background-color: #60bcdb;
+    cursor: pointer;
 }
 
 .delete_btn{
@@ -83,6 +95,17 @@
     color: #fff;
     cursor: pointer;
     letter-spacing: 1px;
+}
+
+.todo_edit img{
+    width: 1.4rem;
+    height: 1.6rem;
+    background-color: #60bcdb;
+    cursor: pointer;
+}
+
+#edit_btn{
+    display: none;
 }
 
 
